--- a/style.css
+++ b/style.css
@@ -8,7 +8,30 @@ header {
     text-align: center;
 }
 
+section {body {
+    background: lightgray; /* Cor de fundo cinza claro */
+    font: normal 15pt Arial; /* Fonte padrão */
+}
+
+header {
+    color: white; /* Texto branco */
+    text-align: center; /* Centralizado */
+}
+
 section {
+    background: white; /* Fundo branco */
+    border-radius: 10px; /* Bordas arredondadas */
+    padding: 15px; /* Espaçamento interno */
+    width: 500px; /* Largura fixa */
+    margin: auto; /* Centraliza na tela */
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.329); /* Sombra */
+}
+
+footer {
+    color: white; /* Texto branco */
+    text-align: center; /* Centralizado */
+    font-style: italic; /* Itálico */
+}
     background: white;
     border-radius: 10px;
     padding: 15px;
